# reactor

./: .dockerignore  .editorconfig  .env.example  .gitignore  .gitleaks.toml  AGENTS.md  CLAUDE.md  CODE_OF_CONDUCT.md  CONTRIBUTING.md  Dockerfile  LICENSE  NOTICE  NOTICE.md  README.md  SECURITY.md  SUPPORT.md  alembic.ini  docker-compose.yml  langgraph.json  pyproject.toml
apps/admin/: .dockerignore  .env.example  .gitignore  AGENTS.md  CHANGELOG.md  CLAUDE.md  DESIGN.md  Dockerfile  README.md  eslint.config.js  index.html  nginx.conf  package.json  playwright.config.ts  pnpm-lock.yaml  pnpm-workspace.yaml  tsconfig.app.json  tsconfig.node.json  vite.config.ts  vite.verify.config.ts  vitest.config.ts
docs/architecture/: agent-harness-operating-model.md  python-langgraph-replatform-spec.md
docs/migration/: cutover-rollback-runbook.md  full-replatform-parity-ledger.md  module-architecture-review.md  retained-table-manifest.txt  route-inventory.md  store-inventory.md
docs/release/: tag-reconstruction-2026-07-07.md  v1.2-release-policy.md
docs/security/: public-release-audit.md
evals/regression/: rag-ingestion-candidate.json
migrations/: env.py
migrations/versions/: 202606260001_initial_agent_runs.py  202606270001_prompt_lab_tables.py  202606270002_feedback_prompt_metadata.py  202606270003_metric_guard_events.py  202606280001_rag_row_level_security.py  202606280002_force_rag_row_level_security.py  202606280003_user_groups.py  202606280004_scheduler_prompt_lab_job_type.py  202606280005_outbox_leases.py  202607230001_agent_run_interrupted_status.py  202607230002_langgraph_store_tables.py
reports/: hardening-suite.json  langsmith-eval-sync-preflight.json  langsmith-eval-sync.json  live-backend-provider-integration.json  live-peer-network-interoperability-smoke.json  live-provider-smoke.json  product-operations-langsmith-eval-sync.json  release-evidence.json  release-readiness.json  release-smoke-run.json
reports/release/: dress-rehearsal-manifest-readiness.json  dress-rehearsal-manifest.imported.ndjson  full-backup-db-api-smoke.missing-env.json  live-backend-provider-integration.json  live-backend-provider-integration.missing-env.json  live-peer-network-interoperability-smoke.missing-env.json  live-provider-smoke.missing-env.json  live-slack-workspace-smoke.missing-env.json  local-api-chat-smoke.json  local-contract-smoke-report.json  local-live-release-evidence.json  local-ollama-provider-smoke.json  local-ollama-release-evidence.json  local-ollama-release-smoke-run.json  release-smoke-plan.local.json  release-smoke-preflight.local.env  release-smoke-preflight.local.json  replatform-readiness.local.json
scripts/ci/: run-hardening-suite.py
scripts/dev/: smoke-health.py  validate-scenario-matrix.py  verify-repository-identity.sh
src/reactor/: __init__.py  followup.py  main.py
tests/hardening/: test_approval_bypass.py  test_eval_regression_suite.py  test_generic_prompt_assets.py  test_mcp_ssrf.py  test_rag_acl.py  test_rag_poisoning.py  test_tool_output_sanitization.py
tests/integration/: test_a2a_postgres_api.py  test_a2a_postgres_push_outbox.py  test_admin_api.py  test_admin_usage_postgres_api.py  test_agent_specs_api.py  test_agent_streaming.py  test_api.py  test_auth_api.py  test_auth_postgres_api.py  test_chat_api.py  test_data_migration.py  test_documents_api.py  test_durable_outbox_postgres.py  test_error_report_api.py  test_eval_api.py  test_feedback_api.py  test_input_guard_api.py  test_input_guard_postgres_graph.py  test_input_guard_rules_api.py  test_intent_postgres_graph.py  test_intents_api.py  test_intents_postgres_api.py  test_mcp_access_policy_api.py  test_mcp_preflight_api.py  test_mcp_security_api.py  test_mcp_server_api.py  test_mcp_swagger_catalog_api.py  test_memory_postgres_lifecycle.py  test_personas_api.py  (+25 more)
(+1517 files in other folders)
