[project]
name = "reactor"
version = "1.2.0"
description = "Python-first Reactor agent service built with FastAPI, LangGraph, and LangChain."
readme = "README.md"
requires-python = ">=3.13,<3.14"
license = { text = "Apache-2.0" }
dependencies = [
    "a2a-sdk[fastapi,telemetry]==1.1.0",
    "alembic==1.18.5",
    "fastapi==0.138.1",
    "langchain==1.3.11",
    "langchain-anthropic==1.4.7",
    "langchain-google-genai==4.2.6",
    "langchain-mcp-adapters==0.3.0",
    "langchain-openai==1.3.3",
    "langchain-postgres==0.0.17",
    "langgraph==1.2.7",
    "langgraph-checkpoint-postgres==3.1.0",
    "langmem==0.0.30",
    "langsmith==0.9.3",
    "mcp==1.28.1",
    "opentelemetry-sdk==1.43.0",
    "orjson==3.11.9",
    "prometheus-client==0.25.0",
    "psycopg[binary,pool]==3.3.4",
    "pyjwt==2.13.0",
    "pydantic==2.13.4",
    "pydantic-settings==2.14.2",
    "redis==8.0.1",
    "sqlalchemy==2.0.51",
    "sse-starlette==3.4.5",
    "structlog==26.1.0",
    "tenacity==9.1.4",
    "uvicorn==0.49.0",
    "slack-sdk==3.42.0",
    "aiohttp==3.14.1",
    "croniter==6.2.2",
    "opentelemetry-exporter-otlp-proto-http==1.43.0",
    "langchain-text-splitters==1.1.2",
    "jsonschema==4.26.0",
    "langchain-ollama==1.1.0",
]

[dependency-groups]
dev = [
    "httpx==0.28.1",
    "hypothesis==6.155.7",
    "mypy==2.1.0",
    "pytest==9.1.1",
    "pytest-asyncio==1.4.0",
    "pytest-cov==7.1.0",
    "pyright==1.1.411",
    "respx==0.23.1",
    "ruff==0.15.20",
    "testcontainers==4.14.2",
    "types-croniter==6.2.2.20260518",
    "types-jsonschema==4.26.0.20260518",
    "types-pyyaml==6.0.12.20260518",
]

[project.scripts]
reactor-api = "reactor.main:main"
reactor-admin = "reactor.cli.admin:main"
reactor-runs = "reactor.cli.runs:main"
reactor-documents = "reactor.cli.documents:main"
reactor-memory = "reactor.cli.memory:main"
reactor-migration-cutover = "reactor.migration.cutover:main"
reactor-migration-dress-rehearsal = "reactor.migration.cutover:dress_rehearsal_main"
reactor-migration-report = "reactor.migration.report:main"
reactor-scenario-matrix = "reactor.evals.scenario_matrix:main"
reactor-hardening-suite = "reactor.evals.hardening_suite:main"
reactor-agent-eval-apply = "reactor.evals.regression_suite_apply:main"
reactor-langsmith-eval-sync = "reactor.evals.langsmith_dataset:main"
reactor-dress-api-smoke = "reactor.release.api_smoke:main"
reactor-local-api-chat-smoke = "reactor.release.api_chat_smoke:main"
reactor-observability-smoke = "reactor.release.observability_smoke:main"
reactor-live-a2a-peer-smoke = "reactor.release.a2a_smoke:main"
reactor-live-backend-provider-smoke = "reactor.release.backend_provider_smoke:main"
reactor-live-provider-smoke = "reactor.release.provider_smoke:main"
reactor-live-slack-smoke = "reactor.release.slack_smoke:main"
reactor-release-evidence = "reactor.release.evidence:main"
reactor-release-readiness-evidence = "reactor.release.readiness_evidence:main"
reactor-release-smoke-plan = "reactor.release.smoke_plan:main"
reactor-release-smoke-run = "reactor.release.smoke_plan:run_main"
reactor-replatform-readiness = "reactor.release.readiness:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/reactor"]

[tool.ruff]
line-length = 100
target-version = "py313"

[tool.ruff.lint]
select = ["E", "F", "I", "UP", "B", "ASYNC", "S"]
ignore = [
    "S101",
]

[tool.pytest.ini_options]
asyncio_mode = "auto"
addopts = ["--import-mode=importlib"]
testpaths = ["tests"]

[tool.pyright]
pythonVersion = "3.13"
typeCheckingMode = "strict"
include = ["src", "tests"]
venvPath = "."
venv = ".venv"
reportMissingTypeStubs = false
reportUnknownMemberType = false
